--- a/prepros.cfg
+++ b/prepros.cfg
@@ -36,22 +36,6 @@
           "parents": [],
           "type": "css"
         },
-        "84b55a44": {
-          "id": "84b55a44",
-          "path": "styles.css",
-          "output": "styles-dist.css",
-          "name": "styles.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "445c00e4": {
           "id": "445c00e4",
           "path": "styles.scss",
@@ -79,32 +63,6 @@
           "size": 17267,
           "type": "jpg",
           "initialSize": 17267,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "02860372": {
-          "id": "02860372",
-          "path": "dois.jpg",
-          "output": "dois.jpg",
-          "name": "dois.jpg",
-          "category": "IMAGE",
-          "size": 28340,
-          "type": "jpg",
-          "initialSize": 28340,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "0c2b45cd": {
-          "id": "0c2b45cd",
-          "path": "imagem.jpg",
-          "output": "imagem.jpg",
-          "name": "imagem.jpg",
-          "category": "IMAGE",
-          "size": 63566,
-          "type": "jpg",
-          "initialSize": 63566,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -187,32 +145,6 @@
           "height": 0,
           "width": 0
         },
-        "ef853afb": {
-          "id": "ef853afb",
-          "path": "quatro.jpg",
-          "output": "quatro.jpg",
-          "name": "quatro.jpg",
-          "category": "IMAGE",
-          "size": 12373,
-          "type": "jpg",
-          "initialSize": 12373,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "90f2ecac": {
-          "id": "90f2ecac",
-          "path": "seis.jpg",
-          "output": "seis.jpg",
-          "name": "seis.jpg",
-          "category": "IMAGE",
-          "size": 26316,
-          "type": "jpg",
-          "initialSize": 26316,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "91279dc8": {
           "id": "91279dc8",
           "path": "seta.jpg",
@@ -226,37 +158,415 @@
           "height": 0,
           "width": 0
         },
-        "90f31852": {
-          "id": "90f31852",
-          "path": "tres.jpg",
-          "output": "tres.jpg",
+        "0c2b45cd": {
+          "id": "0c2b45cd",
+          "path": "imagem.jpg",
+          "output": "imagem.jpg",
+          "name": "imagem.jpg",
+          "category": "IMAGE",
+          "size": 156897,
+          "type": "jpg",
+          "initialSize": 181967,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "a579d117": {
+          "id": "a579d117",
+          "path": "editorial.htm",
+          "output": "editorial.htm",
+          "name": "editorial.htm",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "htm"
+        },
+        "17b89ee1": {
+          "id": "17b89ee1",
+          "path": "javascript.js",
+          "output": "javascript-dist.js",
+          "name": "javascript.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "80522cdf": {
+          "id": "80522cdf",
+          "path": "jquery-3.1.1.js",
+          "output": "jquery-3.1.1-dist.js",
+          "name": "jquery-3.1.1.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "dc6c4c33": {
+          "id": "dc6c4c33",
+          "path": "scripts.js",
+          "output": "scripts-dist.js",
+          "name": "scripts.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "6f029149": {
+          "id": "6f029149",
+          "path": "styles2.css",
+          "output": "styles2-dist.css",
+          "name": "styles2.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "6fd10f4d": {
+          "id": "6fd10f4d",
+          "path": "editorialfundo.png",
+          "output": "editorialfundo.png",
+          "name": "editorialfundo.png",
+          "category": "IMAGE",
+          "size": 3221,
+          "type": "png",
+          "initialSize": 4026,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "d7a8026b": {
+          "id": "d7a8026b",
+          "path": "fundo.jpeg",
+          "output": "fundo.jpeg",
+          "name": "fundo.jpeg",
+          "category": "IMAGE",
+          "size": 74650,
+          "type": "jpeg",
+          "initialSize": 139935,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "45b92fb9": {
+          "id": "45b92fb9",
+          "path": "imagens/3e3ccf38075097.5755646a12b1c.jpg",
+          "output": "imagens/3e3ccf38075097.5755646a12b1c.jpg",
+          "name": "3e3ccf38075097.5755646a12b1c.jpg",
+          "category": "IMAGE",
+          "size": 392495,
+          "type": "jpg",
+          "initialSize": 413580,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "eacf4949": {
+          "id": "eacf4949",
+          "path": "imagens/bombarda.png",
+          "output": "imagens/bombarda.png",
+          "name": "bombarda.png",
+          "category": "IMAGE",
+          "size": 288397,
+          "type": "png",
+          "initialSize": 329474,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "4f2bcc7f": {
+          "id": "4f2bcc7f",
+          "path": "imagens/cookbook.png",
+          "output": "imagens/cookbook.png",
+          "name": "cookbook.png",
+          "category": "IMAGE",
+          "size": 230386,
+          "type": "png",
+          "initialSize": 257370,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "944a2d9d": {
+          "id": "944a2d9d",
+          "path": "imagens/dois.jpg",
+          "output": "imagens/dois.jpg",
+          "name": "dois.jpg",
+          "category": "IMAGE",
+          "size": 28340,
+          "type": "jpg",
+          "initialSize": 28340,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b1bc717d": {
+          "id": "b1bc717d",
+          "path": "imagens/ficções.png",
+          "output": "imagens/ficções.png",
+          "name": "ficções.png",
+          "category": "IMAGE",
+          "size": 232874,
+          "type": "png",
+          "initialSize": 264637,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "bb71b233": {
+          "id": "bb71b233",
+          "path": "imagens/haxe.png",
+          "output": "imagens/haxe.png",
+          "name": "haxe.png",
+          "category": "IMAGE",
+          "size": 315559,
+          "type": "png",
+          "initialSize": 356040,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "11d3b7b2": {
+          "id": "11d3b7b2",
+          "path": "imagens/quatro.jpg",
+          "output": "imagens/quatro.jpg",
+          "name": "quatro.jpg",
+          "category": "IMAGE",
+          "size": 12373,
+          "type": "jpg",
+          "initialSize": 12373,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4357f38e": {
+          "id": "4357f38e",
+          "path": "imagens/tres.jpg",
+          "output": "imagens/tres.jpg",
           "name": "tres.jpg",
           "category": "IMAGE",
-          "size": 32120,
+          "size": 91090,
           "type": "jpg",
-          "initialSize": 32120,
+          "initialSize": 109392,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "88a0576a": {
+          "id": "88a0576a",
+          "path": "imagens/seis.jpg",
+          "output": "imagens/seis.jpg",
+          "name": "seis.jpg",
+          "category": "IMAGE",
+          "size": 26316,
+          "type": "jpg",
+          "initialSize": 26316,
           "optimized": false,
           "height": 0,
           "width": 0
         },
-        "694921aa": {
-          "id": "694921aa",
-          "path": "um.jpg",
-          "output": "um.jpg",
+        "393da6b9": {
+          "id": "393da6b9",
+          "path": "imagens/um.jpg",
+          "output": "imagens/um.jpg",
           "name": "um.jpg",
           "category": "IMAGE",
-          "size": 36380,
+          "size": 5064233,
           "type": "jpg",
-          "initialSize": 36380,
-          "optimized": false,
+          "initialSize": 5087770,
+          "optimized": true,
           "height": 0,
           "width": 0
         },
-        "5f55eca7": {
-          "id": "5f55eca7",
-          "path": "styles-dist.css",
-          "output": "styles-dist-dist.css",
-          "name": "styles-dist.css",
+        "409ac86b": {
+          "id": "409ac86b",
+          "path": "imagenspag.principal/BRANDING.png",
+          "output": "imagenspag.principal/BRANDING.png",
+          "name": "BRANDING.png",
+          "category": "IMAGE",
+          "size": 8317,
+          "type": "png",
+          "initialSize": 10699,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "ca75937d": {
+          "id": "ca75937d",
+          "path": "imagenspag.principal/EDITORIAL.png",
+          "output": "imagenspag.principal/EDITORIAL.png",
+          "name": "EDITORIAL.png",
+          "category": "IMAGE",
+          "size": 5357,
+          "type": "png",
+          "initialSize": 8723,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "dd296aa3": {
+          "id": "dd296aa3",
+          "path": "imagenspag.principal/dois-03-03.png",
+          "output": "imagenspag.principal/dois-03-03.png",
+          "name": "dois-03-03.png",
+          "category": "IMAGE",
+          "size": 1561,
+          "type": "png",
+          "initialSize": 2529,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "adf838f7": {
+          "id": "adf838f7",
+          "path": "imagenspag.principal/PHOTOGRAPHY.png",
+          "output": "imagenspag.principal/PHOTOGRAPHY.png",
+          "name": "PHOTOGRAPHY.png",
+          "category": "IMAGE",
+          "size": 9281,
+          "type": "png",
+          "initialSize": 12409,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "d88b4e2a": {
+          "id": "d88b4e2a",
+          "path": "imagenspag.principal/tres-04.png",
+          "output": "imagenspag.principal/tres-04.png",
+          "name": "tres-04.png",
+          "category": "IMAGE",
+          "size": 1332,
+          "type": "png",
+          "initialSize": 2220,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "816ccdb0": {
+          "id": "816ccdb0",
+          "path": "imagenspag.principal/typography.png",
+          "output": "imagenspag.principal/typography.png",
+          "name": "typography.png",
+          "category": "IMAGE",
+          "size": 6133,
+          "type": "png",
+          "initialSize": 10923,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "d897e997": {
+          "id": "d897e997",
+          "path": "imagenspag.principal/um (2)-02-02.png",
+          "output": "imagenspag.principal/um (2)-02-02.png",
+          "name": "um (2)-02-02.png",
+          "category": "IMAGE",
+          "size": 1464,
+          "type": "png",
+          "initialSize": 2304,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "2bdfd3de": {
+          "id": "2bdfd3de",
+          "path": "imagenspag.principal/quatro-05.png",
+          "output": "imagenspag.principal/quatro-05.png",
+          "name": "quatro-05.png",
+          "category": "IMAGE",
+          "size": 1332,
+          "type": "png",
+          "initialSize": 2324,
+          "optimized": true,
+          "height": 0,
+          "width": 0
+        },
+        "1ffa30ff": {
+          "id": "1ffa30ff",
+          "path": "reset.scss",
+          "output": "reset.css",
+          "name": "reset.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "445c00e4",
+            "b29ba6b0"
+          ],
+          "type": "sass",
+          "forceImportAutoCompile": true
+        },
+        "84b55a44": {
+          "id": "84b55a44",
+          "path": "styles.css",
+          "output": "styles-dist.css",
+          "name": "styles.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "b29ba6b0": {
+          "id": "b29ba6b0",
+          "path": "editstyles.scss",
+          "output": "editstyles.css",
+          "name": "editstyles.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "72fb94e1": {
+          "id": "72fb94e1",
+          "path": "editstyles.css",
+          "output": "editstyles-dist.css",
+          "name": "editstyles.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
